@@ -18,6 +18,7 @@ FreeRapid Downloader 0.86 Update 1
           see startup.properties file for more details
   Added : New internal property - -DcharEncodingForPropertiesFiles defines character encoding for properties files,
           see startup.properties file for more details
+  Added : New internal property - -DopenIncompleteFiles  - makes possible to open .part files while downloading from GUI
   Added : New file start.bat in FRD directory to allow launch FRD without frd.exe
   Changed : User preferences dialog opens faster
   Thanks to all bug reporters:
@@ -28,6 +29,7 @@ FreeRapid Downloader 0.86 Update 1
   Fixed : NullpointerException fix for PasswordAuthentication
   Fixed : Ugly Pause button on Mac version
   Fixed : Rare case - couldn't detect plugins on start - regression in 0.86
+  Fixed : Backup file links.txt is not generated - regression in 0.86
 
 30th October 2011 - FreeRapid Downloader 0.86
   Added : Support for Portuguese and Simplified Chinese languages - thanks to all translators!
